--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 .ocean { 
    height: 15%;
    width: 100%;
-   position: fixed;
+   position:fixed;
    bottom: 0;
    left: 0;
    background: #015871;
@@ -160,6 +160,9 @@ body {
    text-align: center;
    padding: 5em 2em;
    color: #015871;
+   display: grid;
+   grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+   grid-template-rows: repeat(2, 1fr);
 }
 
 .hero-content h1 {
@@ -173,6 +176,10 @@ body {
 .hero-content p {
    font-size: 1.5em;
    opacity: 0.8;
+}
+
+.text-hero>p{
+    color: whitesmoke;
 }
 
 .menu-responsive{
@@ -226,6 +233,64 @@ body {
 }
 .contact{
     display: none;
+}
+
+.video-main{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: #1a0b2e;
+}
+
+.video-main>iframe{
+    border-radius: 30px;
+}
+
+#button-main{
+    grid-column: 1/3;
+    grid-row: 2/3;
+}
+
+#button-main>div{
+    width: 100%;
+    height: 10em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.empresa-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 1rem;
+    padding: 1rem;
+    position: relative;
+    top: 3em;
+}
+
+.empresa {
+    display: flex;
+    align-items: center;
+    background: #f1f1f1;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    gap: 1rem;
+    transition: transform 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.empresa:hover {
+    transform: scale(1.1);
+}
+
+.empresa img {
+    width: 30px;
+    height: 30px;
+}
+
+.empresa span {
+    font-size: 1rem;
+    font-weight: bold;
+    color: #333;
 }
 
 @media (max-width:1030px) {
