--- a/style.css
+++ b/style.css
@@ -314,32 +314,62 @@ body {
     grid-template-columns: repeat(3, 1fr);
     height: 100vh;
     width: 100%;
-    background-color: #1a0b2e;
+    background-color: #183B4E;
+    gap: 2em;
 }
-.about-us-main-container>article{
-    background-color: antiquewhite;
+
+.about-us-main-container>section>article{
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 30em;
-    overflow: hidden;
     justify-content: center;
     align-items: center;
 }
+
+.about-us-main-container>section{
+    margin: 2em;
+}
+
+.img-about{
+    grid-column: 2/3;
+    grid-row: 2/3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+}
+
+.img-about>article>img{
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
 #title-about-me{
     grid-column: 1/4;
-    height: 10em;
-    background-color: red;
+    grid-template-rows: 10em;
+    color: #f1f1f1;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+#title-about-me>article>h3{
+    font-size: 2em;
+    word-spacing: 20px;
+    padding-bottom: .5em;
 }
 
 #values-about-me{
     grid-column: 1/4;
     background-color: blue;
-    height: 12em;
 }
 
 .value-flex{
     display: flex;
+}
+
+.landing-about{
+    background-color: #16213e;
+    color: white;
 }
 
 @media (max-width:1215px) {
